# anglerfish

server/: Cargo.toml
server/src/: main.rs
server/src/api/: control_service.rs  info_service.rs  lighting_service.rs  mod.rs
server/src/services/: control_service.rs  mod.rs
server/static/: index.html
web/: .eslintrc.json  .gitignore  package.json
web/public/: index.html
web/src/: dto.ts  index.tsx
web/src/components/: App.tsx
web/src/components/ui/: Graph.tsx
web/src/components/views/light-settings/: LightSettingsComponent.tsx  LightSettingsContainer.tsx
web/src/utils/: CancellationToken.ts  apiRequest.ts  canvas.ts  delay.ts  getMessageFromException.ts  relativeClick.ts  useApiRequest.ts  websocketRelativeUrl.ts
