[package]
name = "anglerfish"
version = "0.1.0"
authors = ["Somft"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1.0.101", features = ["derive"] }
actix-web-actors = "3"
uuid = { version = "0.8", features = ["v4", "serde"] }
