[package]
name = "anglerfish"
version = "0.1.0"
authors = ["Somft"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.67"
actix-web-actors = "3"
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = "0.4"

pwm-pca9685 = "0.3.1"
linux-embedded-hal = "0.3"

#![cfg(target_os = "linux")]

#![cfg(target_os = "windows")]
